# docs/swagger.yaml
@@ -256,6 +256,104 @@ paths:
       summary: ping
       tags:
       - 测试
+  /pool:
+    get:
+      description: 获取卡池信息
+      parameters:
+      - description: page
+        in: query
+        name: page
+        type: integer
+      - description: size
+        in: query
+        name: size
+        type: integer
+      responses:
+        "200":
+          description: '{"code":"200","msg":"","data":""}'
+          schema:
+            type: string
+      summary: 获取卡池信息
+      tags:
+      - 卡池
+    post:
+      description: 新增卡池信息
+      parameters:
+      - description: versionNum
+        in: query
+        name: versionNum
+        type: integer
+      - description: name
+        in: query
+        name: name
+        type: string
+      - description: Img
+        in: query
+        name: Img
+        type: string
+      - description: Star
+        in: query
+        name: Star
+        type: integer
+      - description: Type
+        in: query
+        name: Type
+        type: string
+      - description: StartTime
+        in: query
+        name: StartTime
+        type: integer
+      - description: EndTime
+        in: query
+        name: EndTime
+        type: integer
+      responses:
+        "200":
+          description: '{"code":"200","msg":"","data":""}'
+          schema:
+            type: string
+      summary: 新增卡池
+      tags:
+      - 卡池
+    put:
+      description: 获取卡池信息
+      parameters:
+      - description: page
+        in: query
+        name: page
+        type: integer
+      - description: size
+        in: query
+        name: size
+        type: integer
+      responses:
+        "200":
+          description: '{"code":"200","msg":"","data":""}'
+          schema:
+            type: string
+      summary: 更新卡池
+      tags:
+      - 卡池
+  /pool-delete:
+    post:
+      description: 删除卡池
+      parameters:
+      - description: userId
+        in: formData
+        name: userId
+        type: integer
+      - description: id
+        in: formData
+        name: id
+        type: integer
+      responses:
+        "200":
+          description: '{"code":"200","msg":"","data":""}'
+          schema:
+            type: string
+      summary: 删除卡池
+      tags:
+      - 卡池
   /register:
     post:
       description: 注册
